Thu Oct 23 11:14:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.cpp:
          Fixed duplicat initialisation

Thu Oct 23 09:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.cpp:
          Added missing include

Thu Oct 23 08:19:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/svn/config:
        * docs/svn/svn-prefs.reg:
          Added conf/pem extensions

Thu Oct 23 08:06:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Updated because of move of DevGuide orbsvcs examples

Thu Oct 23 06:46:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:
          Added the new DevGuide examples

Thu Oct 23 06:29:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.cpp:
          Initialise handle_inheritance_ on the right place

        * ace/Process.h:
          Doxygen change

        * ace/Process.inl:
          Always implement the handle_inheritance method

Wed Oct 22 15:03:31 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Process.h (ACE_Process_Options): Fixed the duplicate
          handle_inheritance_ member.

Wed Oct 22 13:30:54 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Process.{h,cpp}: Added support for enabling/disabling handle
          inheritance on Linux.  Thanks to Christian Fromme <christian at
          ast.dfs dot de> for this fix.

        * ace/Process.{h,cpp}: Fixed the misspelling of
          "handle_inheritence" to "handle_inheritance".

Tue Oct 21 18:31:52 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * apps/gperf/src/Options.cpp:

          Moved the instantiation of the static ACE_CString
          members to appear before the global class instantiation,
          so that the ACE_CString default constructor can in turn